5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1672_2471.log
== TEST (2019-04-28 16:40:20) 
-- CODE:
x=idade
y=IMC
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=idade
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:40:24) 
-- CODE:
x=idade
y=IMC
-- EXECUTION TIME:
0.126123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1672/2471/main.py", line 1, in <module>
    x=idade
NameError: name 'idade' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:40:25) 
-- CODE:
x=idade
y=IMC
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=idade
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:41:01) 
-- CODE:
x=("idade")
y=("IMC")
-- EXECUTION TIME:
0.190315
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:

-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:

-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:41:01) 
-- CODE:
x=("idade")
y=("IMC")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=idade
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:44:20) 
-- CODE:
x=("Idade")
y=("IMC")
z=("Risco")
print("Dados invalidos")
if
-- ERROR:
File "XXXX", line 5
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
